--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "bonik-shop",
+  "name": "RelicRealm-shop",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -42,5 +42,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "tailwindcss": "^3.4.3"
   }
 }
